# recognizer

./: .gitignore  pyproject.toml  requirements.txt
service/image_prep/: crop.py  iou.py  reader.py
service/imgreader/: reader.py
service/markup/: 11.json
service/train/: create_config.py  create_txt.py  models.py  train.py
service/train/config/: coco.data  coco.names  yolov3.cfg
service/train/data/warlus/: train.txt  val.txt
service/train/data/warlus/labels/: 104.txt  11.txt  113.txt  128.txt  13.txt  132.txt  135.txt  137.txt  139.txt  140.txt  147.txt  152.txt  156.txt  17.txt  172.txt  178.txt  184.txt  190.txt  191.txt  199.txt  20.txt  203.txt  206.txt  31.txt  33.txt  34.txt  39.txt  41.txt  42.txt  43.txt  47.txt  49.txt  59.txt  60.txt  61.txt  82.txt  83.txt  84.txt  85.txt  86.txt  (+160 more)
service/train/utils/: utils.py
