[tool.poetry]
name = "research"
version = "0.1.0"
description = ""
authors = ["RomanZorkin <zorkin.roman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
