[tool.poetry]
name = "research"
version = "0.1.0"
description = ""
authors = ["RomanZorkin <zorkin.roman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
opencv-python = "^4.5.5"
torch = "^1.11.0"
torchvision = "^0.12.0"
torch-yolo3 = "^0.1.1"

[tool.poetry.dev-dependencies]
mypy = "^0.960"
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
